2009-10-21  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Fixed the double click condition, it is not double click if
        we move in just in one direction.
        https://bugs.webkit.org/show_bug.cgi?id=30636

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

2009-10-21  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Initialize the events completly before emitting them.
        https://bugs.webkit.org/show_bug.cgi?id=30633

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

2009-10-21  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Fix for when linking using --as-needed with gcc.

        * wx/browser/wscript:

2009-10-21  Kevin Ollivier  <kevino@theolliviers.com>

        wxMac 10.4 build fix. Build and link against a version of libcurl new enough
        to support all the features used by CURL backend.
        
        * wx/build/settings.py:
        * wx/install-unix-extras:

2009-10-20  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        Add {ager,antonm,yurys}@chromium.org into committers.py
        https://bugs.webkit.org/show_bug.cgi?id=30560

        * Scripts/modules/committers.py:

2009-10-20  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Make the Netscape Test plugin available to the Qt launcher.

        * Scripts/run-launcher:

2009-10-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by David Levin.

        Removed WebSocket runtime settings.
        https://bugs.webkit.org/show_bug.cgi?id=29896

        WebSocket runtime configuration is supported by chromium/v8 only.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2009-10-19  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam Barth.
